--- a/style.css
+++ b/style.css
@@ -1,24 +1,14 @@
-
-.heading
-{
-font-size: 23px;
-width: 100%;
-margin: 0px;
-}
-
-#status
-{
-font-size: 18px;
-}
-
 body
 {
-    background-size: cover;
-    background-position: center;
+	text-align: center;
 }
-
+span
+{
+	font-size: 12px;
+	color: red;
+}
 canvas
 {
-    box-shadow: 10px 10px 10px grey;
-    border-radius: 10px;
+	background: pink;
+	border-radius: 20px;
 }
